@@ -25,20 +25,81 @@ import java.nio.file.StandardOpenOption;
 import java.util.Objects;
 
 import org.apache.commons.io.IOUtils;
+import org.apache.commons.io.build.AbstractOrigin;
+import org.apache.commons.io.build.AbstractStreamBuilder;
 
 /**
- * {@link InputStream} implementation which uses direct buffer to read a file to avoid extra copy of data between Java
- * and native memory which happens when using {@link java.io.BufferedInputStream}. Unfortunately, this is not something
- * already available in JDK, {@code sun.nio.ch.ChannelInputStream} supports reading a file using NIO, but does not
- * support buffering.
+ * {@link InputStream} implementation which uses direct buffer to read a file to avoid extra copy of data between Java and native memory which happens when
+ * using {@link java.io.BufferedInputStream}. Unfortunately, this is not something already available in JDK, {@code sun.nio.ch.ChannelInputStream} supports
+ * reading a file using NIO, but does not support buffering.
  * <p>
- * This class was ported and adapted from Apache Spark commit 933dc6cb7b3de1d8ccaf73d124d6eb95b947ed19 where it was
- * called {@code NioBufferedFileInputStream}.
+ * To build an instance, see {@link Builder}.
+ * </p>
+ * <p>
+ * This class was ported and adapted from Apache Spark commit 933dc6cb7b3de1d8ccaf73d124d6eb95b947ed19 where it was called {@code NioBufferedFileInputStream}.
  * </p>
  *
  * @since 2.9.0
  */
 public final class BufferedFileChannelInputStream extends InputStream {
+
+    /**
+     * Builds a new {@link BufferedFileChannelInputStream} instance.
+     * <p>
+     * Using File IO:
+     * </p>
+     *
+     * <pre>{@code
+     * BufferedFileChannelInputStream s = BufferedFileChannelInputStream.builder()
+     *   .setFile(file)
+     *   .setBufferSize(4096)
+     *   .get();}
+     * </pre>
+     * <p>
+     * Using NIO Path:
+     * </p>
+     *
+     * <pre>{@code
+     * BufferedFileChannelInputStream s = BufferedFileChannelInputStream.builder()
+     *   .setPath(path)
+     *   .setBufferSize(4096)
+     *   .get();}
+     * </pre>
+     *
+     * @since 2.12.0
+     */
+    public static class Builder extends AbstractStreamBuilder<BufferedFileChannelInputStream, Builder> {
+
+        /**
+         * Constructs a new instance.
+         * <p>
+         * This builder use the aspects Path and buffer size.
+         * </p>
+         * <p>
+         * You must provide an origin that can be converted to a Path by this builder, otherwise, this call will throw an
+         * {@link UnsupportedOperationException}.
+         * </p>
+         *
+         * @return a new instance.
+         * @throws UnsupportedOperationException if the origin cannot provide a Path.
+         * @see AbstractOrigin#getPath()
+         */
+        @Override
+        public BufferedFileChannelInputStream get() throws IOException {
+            return new BufferedFileChannelInputStream(getPath(), getBufferSize());
+        }
+
+    }
+
+    /**
+     * Constructs a new {@link Builder}.
+     *
+     * @return a new {@link Builder}.
+     * @since 2.12.0
+     */
+    public static Builder builder() {
+        return new Builder();
+    }
 
     private final ByteBuffer byteBuffer;
 
@@ -49,7 +110,9 @@ public final class BufferedFileChannelInputStream extends InputStream {
      *
      * @param file The file to stream.
      * @throws IOException If an I/O error occurs
+     * @deprecated Use {@link #builder()}, {@link Builder}, and {@link Builder#get()}
      */
+    @Deprecated
     public BufferedFileChannelInputStream(final File file) throws IOException {
         this(file, IOUtils.DEFAULT_BUFFER_SIZE);
     }
@@ -57,12 +120,14 @@ public final class BufferedFileChannelInputStream extends InputStream {
     /**
      * Constructs a new instance for the given File and buffer size.
      *
-     * @param file The file to stream.
-     * @param bufferSizeInBytes buffer size.
+     * @param file       The file to stream.
+     * @param bufferSize buffer size.
      * @throws IOException If an I/O error occurs
+     * @deprecated Use {@link #builder()}, {@link Builder}, and {@link Builder#get()}
      */
-    public BufferedFileChannelInputStream(final File file, final int bufferSizeInBytes) throws IOException {
-        this(file.toPath(), bufferSizeInBytes);
+    @Deprecated
+    public BufferedFileChannelInputStream(final File file, final int bufferSize) throws IOException {
+        this(file.toPath(), bufferSize);
     }
 
     /**
@@ -70,7 +135,9 @@ public final class BufferedFileChannelInputStream extends InputStream {
      *
      * @param path The path to stream.
      * @throws IOException If an I/O error occurs
+     * @deprecated Use {@link #builder()}, {@link Builder}, and {@link Builder#get()}
      */
+    @Deprecated
     public BufferedFileChannelInputStream(final Path path) throws IOException {
         this(path, IOUtils.DEFAULT_BUFFER_SIZE);
     }
@@ -78,14 +145,16 @@ public final class BufferedFileChannelInputStream extends InputStream {
     /**
      * Constructs a new instance for the given Path and buffer size.
      *
-     * @param path The path to stream.
-     * @param bufferSizeInBytes buffer size.
+     * @param path       The path to stream.
+     * @param bufferSize buffer size.
      * @throws IOException If an I/O error occurs
+     * @deprecated Use {@link #builder()}, {@link Builder}, and {@link Builder#get()}
      */
-    public BufferedFileChannelInputStream(final Path path, final int bufferSizeInBytes) throws IOException {
+    @Deprecated
+    public BufferedFileChannelInputStream(final Path path, final int bufferSize) throws IOException {
         Objects.requireNonNull(path, "path");
         fileChannel = FileChannel.open(path, StandardOpenOption.READ);
-        byteBuffer = ByteBuffer.allocateDirect(bufferSizeInBytes);
+        byteBuffer = ByteBuffer.allocateDirect(bufferSize);
         byteBuffer.flip();
     }
 
@@ -95,11 +164,10 @@ public final class BufferedFileChannelInputStream extends InputStream {
     }
 
     /**
-     * Attempts to clean up a ByteBuffer if it is direct or memory-mapped. This uses an *unsafe* Sun API that will cause
-     * errors if one attempts to read from the disposed buffer. However, neither the bytes allocated to direct buffers nor
-     * file descriptors opened for memory-mapped buffers put pressure on the garbage collector. Waiting for garbage
-     * collection may lead to the depletion of off-heap memory or huge numbers of open files. There's unfortunately no
-     * standard API to manually dispose of these kinds of buffers.
+     * Attempts to clean up a ByteBuffer if it is direct or memory-mapped. This uses an *unsafe* Sun API that will cause errors if one attempts to read from the
+     * disposed buffer. However, neither the bytes allocated to direct buffers nor file descriptors opened for memory-mapped buffers put pressure on the garbage
+     * collector. Waiting for garbage collection may lead to the depletion of off-heap memory or huge numbers of open files. There's unfortunately no standard
+     * API to manually dispose of these kinds of buffers.
      *
      * @param buffer the buffer to clean.
      */
@@ -110,10 +178,10 @@ public final class BufferedFileChannelInputStream extends InputStream {
     }
 
     /**
-     * In Java 8, the type of {@code sun.nio.ch.DirectBuffer.cleaner()} was {@code sun.misc.Cleaner}, and it was possible to
-     * access the method {@code sun.misc.Cleaner.clean()} to invoke it. The type changed to {@code jdk.internal.ref.Cleaner}
-     * in later JDKs, and the {@code clean()} method is not accessible even with reflection. However {@code sun.misc.Unsafe}
-     * added an {@code invokeCleaner()} method in JDK 9+ and this is still accessible with reflection.
+     * In Java 8, the type of {@code sun.nio.ch.DirectBuffer.cleaner()} was {@code sun.misc.Cleaner}, and it was possible to access the method
+     * {@code sun.misc.Cleaner.clean()} to invoke it. The type changed to {@code jdk.internal.ref.Cleaner} in later JDKs, and the {@code clean()} method is not
+     * accessible even with reflection. However {@code sun.misc.Unsafe} added an {@code invokeCleaner()} method in JDK 9+ and this is still accessible with
+     * reflection.
      *
      * @param buffer the buffer to clean. must be a DirectBuffer.
      */
